--- a/app/src/main/res/layout/fragment_business_profile.xml
+++ b/app/src/main/res/layout/fragment_business_profile.xml
@@ -86,8 +86,8 @@
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
+                      android:paddingVertical="@dimen/_4sdp"
                       android:src="@drawable/arrowforwad"
-                      android:layout_marginTop="@dimen/_4sdp"
                       android:layout_marginStart="@dimen/_2sdp"/>
 
            </LinearLayout>
