--- a/app/src/main/res/layout/order.xml
+++ b/app/src/main/res/layout/order.xml
@@ -4,24 +4,17 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
-
-
-
 
         <TextView
             android:id="@+id/txt_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="#75558759"
-            android:textAllCaps="false"
+             android:textAllCaps="false"
             android:textColor="@color/black"
             android:textSize="12sp"
             android:layout_marginStart="@dimen/_16sdp"
@@ -32,30 +25,31 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_active"
-            android:layout_width="@dimen/_42sdp"
+            android:layout_width="0dp"
             android:layout_height="@dimen/_14sdp"
+            android:layout_marginStart="@dimen/_4sdp"
             android:background="@drawable/success"
             android:text="Success"
-             android:textSize="9sp"
-            android:textColor="#008105"
-            android:textAllCaps="false"
             android:textAlignment="center"
-            android:layout_marginStart="@dimen/_4sdp"
-            app:layout_constraintTop_toTopOf="@id/txt_number"
+            android:textAllCaps="false"
+            android:textColor="#008105"
+            android:textSize="9sp"
+            app:layout_constraintBottom_toBottomOf="@id/txt_number"
             app:layout_constraintStart_toEndOf="@id/txt_number"
-            app:layout_constraintBottom_toBottomOf="@id/txt_number"/>
+            app:layout_constraintTop_toTopOf="@id/txt_number" />
 
         <TextView
+            android:id="@+id/txt_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_18sdp"
             android:text="01/02/2033 12:11 PM"
             android:textAllCaps="false"
             android:textColor="@color/black"
             android:textSize="12sp"
-            android:layout_marginEnd="@dimen/_18sdp"
-            app:layout_constraintTop_toTopOf="@id/txt_number"
             app:layout_constraintBottom_toBottomOf="@id/txt_number"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/txt_number" />
 
         <ImageView
             android:id="@+id/img_location"
@@ -80,15 +74,16 @@
 
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_2sdp"
             android:text="Rajeev Chauk blue line mango street New Delhi"
             android:textAllCaps="false"
             android:textColor="#9C9C9C"
             android:textSize="10sp"
-            android:layout_marginTop="@dimen/_2sdp"
+            app:layout_constraintEnd_toEndOf="@+id/txt_date"
             app:layout_constraintStart_toStartOf="@id/txt_Kesari_Bakers"
-            app:layout_constraintTop_toBottomOf="@id/txt_Kesari_Bakers"/>
+            app:layout_constraintTop_toBottomOf="@id/txt_Kesari_Bakers" />
 
         <ImageView
             android:id="@+id/img_line"
